- Fixed some layout bugs

--- a/src/app/components/sidebar-component/element.scss
+++ b/src/app/components/sidebar-component/element.scss
@@ -23,3 +23,9 @@ div.wrap {
         }
     }
 }
+
+paper-tabs {
+    .active {
+        background-color: #47aa57;
+    }
+}
